tests/integration/commands/snapshots/integration__commands__commit__commit_with_parent.snap
---
source: tests/integration/commands/commit.rs
assertion_line: 58
expression: log
---
commit [sha1]
Author: [name] <[email]>
Date: [date]

    another commit

commit [sha1]
Author: [name] <[email]>
Date: [date]

    initial commit
