tests/integration/commands/snapshots/integration__commands__commit__initial_commit.snap
---
source: tests/integration/commands/commit.rs
assertion_line: 30
expression: log
---
commit [sha1]
Author: [name] <[email]>
Date: [date]

    initial commit
